agent: vanilla Mixin service verified end-to-end to 'mixin applied'
Standalone mode (java -javaagent, no Fabric) now runs the full mixin
pipeline against a real vanilla 1.20.1 server: service bootstrap →
config selection → target resolution → apply → audit. Remaining gap is
the injection NAME mapping (obfuscated production jar has no 'loadWorld')
— needs a loom production-mappings refmap; documented in docs/07.

Key pieces (debugged against a live server in e2e/):
- AgentTransformer: config registered at first net/minecraft/server/Main
  transform (bundler classloader live), JDK-class early exit, dot-form
  names, DEFAULT-phase environment, exception surfacing
- MixinServiceVanilla: dual-loader bytecode lookup (game classes via the
  bundler loader, mixin classes via the system loader), agent-jar
  classpath, debug stream to stdout
- MorrowMod: slf4j → System.out (vanilla ships slf4j only as a nested
  library, invisible to the agent classloader)
- agentJar: ASM forced to 9.7.1 (mixin 0.8.5's 9.2 cannot parse Java 21
  class files), agent-only resources dir for the property service
- e2e/ gitignored (Mojang server.jar, world data)